--- a/TheWeb/src/app/account/account.component.html
+++ b/TheWeb/src/app/account/account.component.html
@@ -16,13 +16,13 @@
             </div>
             <div class="ac-box text-capitalize">
                 <div [routerLink]="['/account/basicinfo']" routerLinkActive="ac-action-active" class="ac-actions">
-                    <a>Basic info</a><span>&gt;</span>
+                    <a>Account Details</a>
                 </div>
                 <div [routerLink]="['/account/address']" routerLinkActive="ac-action-active" class="ac-actions">
-                    <a>Address</a><span>&gt;</span>
+                    <a>Address</a>
                 </div>
                 <div [routerLink]="['/account/orders']" routerLinkActive="ac-action-active" class="ac-actions">
-                    <a>Orders</a><span>&gt;</span>
+                    <a>Orders</a>
                 </div>
             </div>
         </div>
