--- a/TheWeb/src/app/cart/cart.component.html
+++ b/TheWeb/src/app/cart/cart.component.html
@@ -1,105 +1,91 @@
-﻿<div *ngIf="cart.length==0" class="main-container cart-container">
-    <div class="text-capitalize text-center jumbotron">your cart is empty !</div>
+﻿<div *ngIf="!cart">
+    <loading message="getting cart"></loading>
+    
 </div>
-<div *ngIf="cart.length>0" class="main-container">
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-6">
-            <div class="cart-container">
-                <h4 class="text-capitalize">shopping cart</h4>
-                <div *ngFor="let prod of cart;let index=index" class="row cart-items">
-                    <div class="col-md-3">
-                        <a [routerLink]="['/productdetails',prod.ProductID]" class="handtool">
-                            <img class="" src="{{prod.ProductImage}}">
-                        </a>
-                        <div>
-                            <button class="btn" (click)="changeNumber(prod,-1)">
-                                <i class="fa fa-arrow-circle-left"></i>
-                            </button>
-                            <input disabled type="text" pattern="\d*" value="{{prod.CartCount}}" size="4"
-                                   title="Qty" class="input-text qty" maxlength="12">
-                            <button class="btn" (click)="changeNumber(prod,1)">
-                                <i class="fa fa-arrow-circle-right"></i>
-                            </button>
+<div *ngIf="cart">
+    <div *ngIf="cart.length==0" class="main-container cart-container">
+        <div class="text-capitalize text-center jumbotron">your cart is empty !</div>
+    </div>
+    <div *ngIf="cart.length>0" class="main-container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-6">
+                <div class="cart-container">
+                    <h4 class="text-capitalize">shopping cart</h4>
+                    <div *ngFor="let prod of cart;let index=index" class="row cart-items">
+                        <div class="col-md-3">
+                            <a [routerLink]="['/productdetails',prod.ProductID]" class="handtool">
+                                <img class="" src="{{prod.ProductImage}}">
+                            </a>
+                            <div>
+                                <button class="btn" (click)="changeNumber(prod,-1)">
+                                    <i class="fa fa-arrow-circle-left"></i>
+                                </button>
+                                <input disabled type="text" pattern="\d*" value="{{prod.CartCount}}" size="4"
+                                       title="Qty" class="input-text qty" maxlength="12">
+                                <button class="btn" (click)="changeNumber(prod,1)">
+                                    <i class="fa fa-arrow-circle-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <a [routerLink]="['/productdetails',prod.ProductID]" href="#">{{prod.ProductName}}</a>
+                        </div>
+                        <div class="col-md-2">
+                            <strong class="price">
+                                {{prod.ProductPrice | currency:'INR':'symbol'}}
+                                <i class="fa fa-remove"></i>
+                                {{prod.CartCount}}
+                            </strong>
+                        </div>
+                        <div class="col-md-2">
+                            <button (click)="removeFromCart(prod,0)" class="checkout-button">REMOVE</button>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <a [routerLink]="['/productdetails',prod.ProductID]" href="#">{{prod.ProductName}}</a>
-                    </div>
-                    <div class="col-md-2">
-                        <strong class="price">
-                            {{prod.ProductPrice | currency:'INR':'symbol'}}
-                            <i class="fa fa-remove"></i>
-                            {{prod.CartCount}}
-                        </strong>
-                    </div>
-                    <div class="col-md-2">
-                        <button (click)="removeFromCart(prod,0)" class="checkout-button">REMOVE</button>
-                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4 text-capitalize">
+                <div class="cart-container">
+                    <h4>Estimate Shipping</h4>
+                    <table class="table table-dark">
+                        <tbody>
+                            <tr>
+                                <td class="text-left">PIN code</td>
+                                <td>
+                                   <check-pincode (address)="checkPin($event)" (delCharge)="getDeliveryCharge($event)"></check-pincode>
+
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+                <div class="cart-container">
+                    <h4>Summary</h4>
+                    <table class="table table-dark">
+                        <tbody>
+                            <tr>
+                                <td class="text-left">Subtotal</td>
+                                <td class="text-right">{{cartSum | currency:'INR':'symbol'}}</td>
+                            </tr>
+                            <tr>
+                                <td class="text-left">ESTIMATED SHIPPING & HANDLING</td>
+                                <td *ngIf="delCharge" class="text-right">{{delCharge | currency:'INR':'symbol'}}</td>
+                            </tr>
+                            <tr>
+                                <td class="text-left">Subtotal</td>
+                                <td class="text-right">{{cartSum + delCharge | currency:'INR':'symbol'}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <button class="checkout-button" (click)="checkout()">
+                        Proceed to checkout
+                    </button>
                 </div>
 
             </div>
+            <div class="col-1"></div>
         </div>
-        <div class="col-md-4 text-capitalize">
-            <div class="cart-container">
-                <h4>Estimate Shipping</h4>
-                <table class="table table-dark">
-                    <tbody>
-                        <tr *ngIf="!address">
-                            <td class="text-left">PIN code</td>
-                            <td>
-                                <form>
-                                    <div class="input-group pull-right">
-                                        <input type="text" [(ngModel)]="pincode" name="pincode" class="input-text pin"
-                                               pattern="\d*" maxlength="6">
-                                        <button (click)="checkPin();" class="input-group-addon handtool">
-                                            <i class="fa fa-search"></i>
-                                        </button>
-                                    </div>
-                                </form>
-
-                            </td>
-                        </tr>
-                        <tr *ngIf="address">
-                            <td class="text-left">Deliver to</td>
-                            <td>
-                                <div>
-                                    {{address}}
-                                </div>
-                                <div>
-                                    <button (click)="address=null" class="checkout-button">Change</button>
-                                </div>
-                            </td>
-                        </tr>
-
-
-                    </tbody>
-                </table>
-            </div>
-            <div class="cart-container">
-                <h4>Summary</h4>
-                <table class="table table-dark">
-                    <tbody>
-                        <tr>
-                            <td class="text-left">Subtotal</td>
-                            <td class="text-right">{{cartSum | currency:'INR':'symbol'}}</td>
-                        </tr>
-                        <tr>
-                            <td class="text-left">ESTIMATED SHIPPING & HANDLING</td>
-                            <td *ngIf="address" class="text-right">50</td>
-                        </tr>
-                        <tr>
-                            <td class="text-left">Subtotal</td>
-                            <td class="text-right">{{cartSum + 50 | currency:'INR':'symbol'}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-                <button class="checkout-button">
-                    Proceed to checkout
-                </button>
-            </div>
-           
-        </div>
-        <div class="col-1"></div>
     </div>
 </div>
