--- a/TheWeb/src/app/login/register.component.html
+++ b/TheWeb/src/app/login/register.component.html
@@ -1,7 +1,6 @@
-﻿<h1>Sign Up</h1>
-<p>Please fill in this form to create an account.</p>
-<hr>
-<div class="row social">
+﻿<!--<h1>Sign Up</h1>
+<p>Please fill in this form to create an account.</p>-->
+<div class="row">
     <div class="col-md-6">
         <button class="btn google" (click)="googlesign()">
             <i class="fa fa-google-plus fa-fw"></i>
@@ -15,31 +14,29 @@
     
 </div>
 <hr>
-<div class="form">
 
-</div>
 <form novalidate (ngSubmit)="register()" [formGroup]="registerForm">
-    <div>
-
+    <div class="form-group">
+        <input autocomplete="off" type="text" id="reg-email" class="form-control" required formControlName="email">
+        <label class="form-control-placeholder" for="reg-email">Name</label>
+        
     </div>
-    <label for="reg-email"><b>Email</b></label>
-    <input formControlName="email" id="reg-email" placeholder="Enter Email" type="text" required>
-
-    <label for="reg-password"><b>Password</b></label>
-    <input formControlName="password" id="reg-password" type="password" placeholder="Enter Password" required>
-
-    <label for="reg-password_confirmation"><b>Repeat Password</b></label>
-    <input formControlName="password_confirmation" id="reg-password_confirmation" type="password" placeholder="Repeat Password" required>
-    <hr>
-
-
+    <div class="form-group">
+        <input type="password" id="reg-password" class="form-control" required formControlName="password">
+        <label class="form-control-placeholder" for="reg-password">Password</label>
+       
+    </div>
+    <div class="form-group">
+        <input type="password" id="reg-password_confirmation" class="form-control" required formControlName="password_confirmation">
+        <label class="form-control-placeholder" for="reg-password_confirmation">Confirm Password</label>
+       
+    </div>
     <p>By creating an account you agree to our<a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-    
+
     <div *ngIf="statusMessage" class="alert alert-success"><br /><strong>{{statusMessage}}</strong></div>
 
     <div class="clearfix">
-        <button type="button" onclick="document.getElementById('loginModal').style.display='none'" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
+        <button type="submit" class="btn btn-dark">Sign Up</button>
     </div>
     <div class="forgot register-footer">
         <span>Already have an account?</span>
