--- a/TheWeb/src/app/cart/payment.component.html
+++ b/TheWeb/src/app/cart/payment.component.html
@@ -1,2 +1,2 @@
 ﻿<div>payment</div>
-<button [routerLink]="['/cart/checkout/review']" class="btn btn-success">Complete</button>
+<button [routerLink]="['/cart/checkout/review']" class="btn btn-success">Next</button>
