--- a/TheWeb/src/app/account/account.component.css
+++ b/TheWeb/src/app/account/account.component.css
@@ -1,10 +1,4 @@
-﻿.ac-box {
-    background-color: #fff;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .08);
-    padding: 12px;
-    margin-bottom: 16px;
-}
+﻿
 
 .ac-img {
     width: 50px;
