--- a/TheWeb/src/app/cart/checkout.component.html
+++ b/TheWeb/src/app/cart/checkout.component.html
@@ -1,14 +1,17 @@
 ﻿<div class="main-container">
     <div class="row">
-        <div class="text-capitalize text-center col-12">
+        <div class="text-capitalize text-center col-md-2 ac-box">
             <msw-navbar></msw-navbar>
         </div>
-
-
+        <div class="col-md-10">
+            <div class="ac-box">
+                {{Order.AddressID}}
+            </div>
+            <div class="ac-box">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
     </div>
-    <div class="row">
-        <div class="col-md-12"><router-outlet></router-outlet></div>
-        
-    </div>
+    
 
 </div>
