--- a/TheWeb/src/app/cart/complete.component.html
+++ b/TheWeb/src/app/cart/complete.component.html
@@ -1,2 +1,9 @@
-﻿<div>complete</div>
-<button [routerLink]="['/cart/checkout/complete']" class="btn btn-success">Next</button>
+﻿<div class="container">
+    <div class="row">
+
+    </div>
+    <div class="row" style="">
+        <div class="col-md-12"><button [routerLink]="['/']" class="btn btn-dark">Done</button></div>
+    </div>
+</div>
+
