--- a/TheWeb/src/app/cart/nav-bar.css
+++ b/TheWeb/src/app/cart/nav-bar.css
@@ -1,14 +1,16 @@
 .stepwizard-step p {
     margin-top: 10px;
+    font-weight:bold;
 }
 
 .stepwizard-row {
-    display: table-row;
+    /*display: table-row;*/
+    /*padding:0 50px 0 50px;*/
 }
 
 .stepwizard {
     display: table;
-    width: 80%;
+    width: 100%;
     position: relative;
     /*padding:20px;*/
 }
@@ -18,7 +20,7 @@
     filter: alpha(opacity=100) !important;
 }
 
-.stepwizard-row:before {
+/*.stepwizard-row:before {
     top: 28px;
     bottom: 0;
     position: absolute;
@@ -27,8 +29,30 @@
     height: 5px;
     background-color: coral;
     z-order: 0;
-}
+    right:0;
 
+}*/
+.stepwizard-row:before {
+    position: absolute;
+    content: " ";
+    width: 5px;
+    height: 100%;
+    background-color: coral;
+    z-order: 0;
+    right: 50%;
+    /*left:20px;*/
+}
+/*@media only screen and (max-width:600px){
+    .stepwizard-row:before {
+        position: absolute;
+        content: " ";
+        width: 5px;
+        height: 100%;
+        background-color: coral;
+        z-order: 0;
+        right: 50%;
+    }
+}*/
 .stepwizard-step {
     display: table-cell;
     text-align: center;
