--- a/TheWeb/src/app/cart/review.component.html
+++ b/TheWeb/src/app/cart/review.component.html
@@ -1,2 +1,10 @@
-﻿<div>review</div>
-<button [routerLink]="['/cart/checkout/complete']" class="btn btn-success">Next</button>
+﻿<div class="container">
+    <div class="row">
+
+    </div>
+    <div class="row" style="">
+        <div class="col-md-6 col-sm-6"><button [routerLink]="['/cart/checkout/review']" class="btn btn-dark pull-left">Back</button></div>
+        <div class="col-md-6 col-sm-6"><button [routerLink]="['/cart/checkout/complete']" class="btn btn-success pull-right">Next</button></div>
+    </div>
+</div>
+
