--- a/TheWeb/src/app/cart/checkout.component.html
+++ b/TheWeb/src/app/cart/checkout.component.html
@@ -1,17 +1,15 @@
 ﻿<div class="main-container">
-    <div class="row">
-        <div class="text-capitalize text-center col-md-2 ac-box">
+    <div class="row" style="margin:0 10px 0 10px;">
+        <div class="col-md-2">
             <msw-navbar></msw-navbar>
         </div>
         <div class="col-md-10">
-            <div class="ac-box">
+            <!--<div class="ac-box">
                 {{Order.AddressID}}
-            </div>
+            </div>-->
             <div class="ac-box">
                 <router-outlet></router-outlet>
             </div>
         </div>
     </div>
-    
-
 </div>
