--- a/TheWeb/src/app/header.component.html
+++ b/TheWeb/src/app/header.component.html
@@ -7,7 +7,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="navbar-collapse collapse" id="navb" style="">
+    <div class="navbar-collapse collapse" id="navb">
         <ul class="navbar-nav mr-auto social-icon">
             <li class="nav-item">
                 <a href="#" target="_blank">
