--- a/TheWeb/src/app/cart/navbar.component.html
+++ b/TheWeb/src/app/cart/navbar.component.html
@@ -1,42 +1,35 @@
-<div class="main-container">
-            <div class="stepwizard">
-                <div class="row stepwizard-row">
-                    <div class="col-md-12 stepwizard-step">
-                        <button type="button" routerLinkActive="btn-glow-primary" [routerLink]="['/cart/checkout/address']"
-                                class="btn btn-primary">
-                            <i class="fa fa-address-book fa-3x"></i>
+    <div class="ac-box">
+        <div class="row">
+            <div class="col-md-12 stepwizard-step">
+                <button type="button" routerLinkActive="btn-glow-primary"
+                        class="btn btn-primary">
+                    <i class="fa fa-address-book fa-2x"></i>
 
-                        </button>
-                        <p>Address</p>
-                    </div>
-                    <div class="col-md-12 stepwizard-step">
-                        <button type="button" routerLinkActive="btn-glow-success" [routerLink]="['/cart/checkout/payment']" 
-                                class="btn btn-success">
-                            <i class="fa fa-paypal fa-3x"></i>
-                        </button>
-                        <p>Payment</p>
-                    </div>
-                    <div class="col-md-12 stepwizard-step">
-                        <button type="button" routerLinkActive="btn-glow-info" [routerLink]="['/cart/checkout/review']" 
-                                class="btn btn-info">
-                            <i class="fa fa-eye fa-3x"></i>
-                        </button>
-                        <p>Review &amp; Order</p>
-                    </div>
-                    <div class="col-md-12 stepwizard-step">
-                        <button type="button" routerLinkActive="btn-glow-secondary" [routerLink]="['/cart/checkout/complete']" 
-                                class="btn btn-secondary">
-                            <i class="fa fa-check-square fa-3x"></i>
-                        </button>
-                        <p>Complete</p>
-                    </div>
-                </div>
+                </button>
+                <p>Address</p>
+            </div>
+            <div class="col-md-12 stepwizard-step">
+                <button type="button" routerLinkActive="btn-glow-info"
+                        class="btn btn-info">
+                    <i class="fa fa-eye fa-2x"></i>
+                </button>
+                <p>Review</p>
+            </div>
+            <div class="col-md-12 stepwizard-step">
+                <button type="button" routerLinkActive="btn-glow-success"
+                        class="btn btn-success">
+                    <i class="fa fa-paypal fa-2x"></i>
+                </button>
+                <p>Payment</p>
+            </div>
+
+            <div class="col-md-12 stepwizard-step">
+                <button type="button" routerLinkActive="btn-glow-secondary"
+                        class="btn btn-secondary">
+                    <i class="fa fa-check-square fa-2x"></i>
+                </button>
+                <p>Complete</p>
             </div>
         </div>
+    </div>
 
-
-<!--<ul id="progressbar">
-    <li routerLinkActive="active" [routerLink]="['/cart/checkout/address']">Address</li>
-    <li routerLinkActive="active" [routerLink]="['/cart/checkout/payment']">Payment</li>
-
-</ul>-->
