--- a/TheWeb/src/app/cart/payment.component.html
+++ b/TheWeb/src/app/cart/payment.component.html
@@ -3,8 +3,8 @@
 
     </div>
     <div class="row" style="">
-        <div class="col-md-6 col-sm-6"><button [routerLink]="['/cart/checkout/address']" class="btn btn-dark pull-left">Back</button></div>
-        <div class="col-md-6 col-sm-6"><button [routerLink]="['/cart/checkout/review']" class="btn btn-success pull-right">Next</button></div>
+        <div class="col-md-6 col-sm-6"><button [routerLink]="['/cart/checkout/review']" class="btn btn-dark pull-left">Back</button></div>
+        <div class="col-md-6 col-sm-6"><button [routerLink]="['/cart/checkout/complete']" class="btn btn-success pull-right">Next</button></div>
     </div>
 </div>
 
